Changes in disburse

--- a/gold-admin-frontend/src/app/views/partials/components/disburse/disburse.component.html
+++ b/gold-admin-frontend/src/app/views/partials/components/disburse/disburse.component.html
@@ -59,7 +59,7 @@
                     <label class="kt-padding-l-10 mandatory">Scrap Amount</label>
                 </div>
                 <div class="col-8">
-                    <input type="text" class="form-control" formControlName="scrapAmount">
+                    <input type="text" class="form-control" formControlName="scrapAmount" readonly>
                 </div>
             </div>
         </div>
