--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/packet-tracking/packet-tracking.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/packet-tracking/packet-tracking.component.scss
@@ -1,5 +1,5 @@
 :host{
-    .mat-column-customerID{
+    .mat-column-customerId{
         padding-left: 10px !important;
         flex: 0 0 10% !important;
     }
@@ -7,9 +7,27 @@
         flex: 0 0 8% !important;
     }
     .mat-column-actions{
-        flex: 0 0 15% !important;
+        flex: 0 0 30% !important;
+    } 
+    .mat-column-internalBranch{
+        flex: 0 0 7% !important;
+    }
+    .mat-column-customerName{
+        flex: 0 0 12% !important;
+    } 
+    .mat-column-userName{
+        flex: 0 0 12% !important;
+    }
+    .mat-column-loanAmount{
+        flex: 0 0 7% !important;
+    } 
+    .mat-column-packetUniqueId{
+        flex: 0 0 7% !important;
+    }
+    .mat-column-currentLocation{
+        flex: 0 0 12% !important;
     }
     mat-row,mat-header-row{
-        width: 120% !important;
+        width: 125% !important;
     }
 }
