--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/update-location/update-location.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/packets/update-location/update-location.component.html
@@ -9,10 +9,12 @@
                             <label class="kt-padding-l-10 mandatory">Select Location</label>
                         </div>
                         <div class="col-8">
-                            <select name="" id="" class="form-control" formControlName="location" 
-                            [class.isError]="locationForm.controls.location.invalid &&  locationForm.controls.location.touched">
-                                <option value=""></option>
-                            </select>                                
+                            <select name="" id="" class="form-control" formControlName="location"
+                                [class.isError]="locationForm.controls.location.invalid &&  locationForm.controls.location.touched">
+                                <option selected disabled value="">Select Location</option>
+                                <option [value]="item.id" *ngFor="let item of packetLocations">
+                                    {{item.location | titlecase}}</option>
+                            </select>
                             <mat-error
                                 *ngIf="locationForm.controls.location.touched && locationForm.controls.location.errors?.required">
                                 Required field
@@ -24,52 +26,63 @@
                             <label class="kt-padding-l-10 mandatory">Barcode No.</label>
                         </div>
                         <div class="col-8">
-                            <kt-button [type]="'button'" [value]="'Scan'"></kt-button>
+                            <div class="row">
+                                <div class="col-7 d-flex align-items-center">
+                                    Packet ID
+                                </div>
+                                <div class="col text-right">
+                                    <kt-button [type]="'button'" [value]="'Scan'"></kt-button>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="row justify-content-center kt-margin-t-15">
                         <div class="col-8 offset-4">
-                            <input type="text" class="form-control" placeholder="Enter Barcode No.">
+                            <input type="text" class="form-control" placeholder="Enter Barcode No."
+                                formControlName="barcodeNumber"
+                                [class.isError]="locationForm.controls.barcodeNumber.invalid &&  locationForm.controls.barcodeNumber.touched">
                         </div>
                     </div>
                     <div class="row justify-content-center kt-margin-t-15">
                         <div class="col-4 form-label">
-                            <label class="kt-padding-l-10 mandatory">Select Role</label>
+                            <label class="kt-padding-l-10 mandatory">Mobile Number</label>
                         </div>
                         <div class="col-8">
-                            <select name="" id="" class="form-control" formControlName="location" 
-                            [class.isError]="locationForm.controls.location.invalid &&  locationForm.controls.location.touched">
-                                <option value=""></option>
-                            </select>                                
+                            <input class="form-control" formControlName="mobileNumber"
+                                [class.isError]="locationForm.controls.mobileNumber.invalid &&  locationForm.controls.mobileNumber.touched" />
                             <mat-error
-                                *ngIf="locationForm.controls.location.touched && locationForm.controls.location.errors?.required">
+                                *ngIf="locationForm.controls.mobileNumber.touched && locationForm.controls.mobileNumber.errors?.required">
                                 Required field
                             </mat-error>
                         </div>
                     </div>
                     <div class="row justify-content-center kt-margin-t-15">
                         <div class="col-4 form-label">
-                            <label class="kt-padding-l-10 mandatory">Select User</label>
+                            <label class="kt-padding-l-10 mandatory">User</label>
                         </div>
                         <div class="col-8">
-                            <select name="" id="" class="form-control" formControlName="location" 
-                            [class.isError]="locationForm.controls.location.invalid &&  locationForm.controls.location.touched">
-                                <option value=""></option>
-                            </select>                                
+                            <input class="form-control" formControlName="user"
+                                [class.isError]="locationForm.controls.user.invalid &&  locationForm.controls.user.touched" />
                             <mat-error
-                                *ngIf="locationForm.controls.location.touched && locationForm.controls.location.errors?.required">
+                                *ngIf="locationForm.controls.user.touched && locationForm.controls.user.errors?.required">
                                 Required field
                             </mat-error>
                         </div>
                     </div>
                     <div class="row justify-content-center kt-margin-t-15">
                         <div class="col-4 offset-4">
-                            <kt-button [type]="'button'" [value]="'Send OTP'"></kt-button>
-                            <mat-hint class="kt-pointer kt-margin-l-5">
-                                Resend OTP</mat-hint>
+                            <kt-button [myClass]="'w-100'" [type]="'button'" [value]="'Send OTP'"></kt-button>
                         </div>
-                        <div class="col-4">
-                            <input type="text" class="form-control" placeholder="Enter OTP.">
+                        <div class="col-4 d-flex justify-content-center align-items-center">
+                            <label class="kt-pointer kt-link kt-link--brand kt-font-bolder">
+                                Resend OTP</label>
+                        </div>
+                    </div>
+
+                    <div class="row justify-content-center kt-margin-t-15">
+                        <div class="col offset-4">
+                            <input type="text" class="form-control" placeholder="Enter OTP" formControlName="otp"
+                                [class.isError]="locationForm.controls.otp.invalid &&  locationForm.controls.otp.touched">
                         </div>
                     </div>
                 </div>
@@ -78,7 +91,7 @@
     </kt-portlet-body>
     <kt-portlet-footer>
         <div class="p-3">
-            <kt-modal-footer  (action)="action($event)" [value]="'Update'"></kt-modal-footer>
+            <kt-modal-footer (action)="action($event)" [value]="'Update'"></kt-modal-footer>
         </div>
     </kt-portlet-footer>
 </kt-portlet>
