--- a/gold-admin-frontend/src/app/views/pages/admin/scrap-management/quick-pay/quick-pay.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/scrap-management/quick-pay/quick-pay.component.html
@@ -75,7 +75,7 @@
                                         <label class="text-color mandatory kt-padding-l-10">Transaction ID</label>
                                     </div>
                                     <div class="col-6">
-                                        <input type="text" class="form-control text-uppercase" placeholder="IFSC0000XXX"
+                                        <input type="text" class="form-control text-uppercase" placeholder="TRN123456"
                                             formControlName="transactionId"
                                             [class.isError]="controls.transactionId.touched && controls.transactionId.invalid">
                                         <mat-error
@@ -95,8 +95,8 @@
                                         <label class="text-color mandatory kt-padding-l-10">Cheque Number</label>
                                     </div>
                                     <div class="col-6">
-                                        <input type="text" class="form-control text-uppercase" placeholder="IFSC0000XXX"
-                                            formControlName="chequeNumber" maxlength="11"
+                                        <input type="text" class="form-control text-uppercase" placeholder="491995"
+                                            formControlName="chequeNumber"
                                             [class.isError]="controls.chequeNumber.touched && controls.chequeNumber.invalid">
                                         <mat-error
                                             *ngIf="controls.chequeNumber.errors?.required && controls.chequeNumber.touched">
